feat: add vite project

--- a/docs/About.mdx
+++ b/docs/About.mdx
@@ -1,7 +1,8 @@
----
-globalUIComponents: true
----
-
 # About
 
-{/* <Icon /> */}
+## Icon component
+
+<code src="../src/components/Icon.jsx"> </code>
+
+## Button component
+<code src="../src/components/Button.jsx"> </code>
